...
                guard let data = self.viewModel.imageData else { return }
                self.searchView.setImage(data: data)
                self.searchView.setAddFavoriteButtonEnabled(ifNeeded: self.searchView.imageView.image == nil)
            })
            self.viewModel.requestLimi -= 1
        } else {
            self.showAlert("Request limit exceeded", nil, okCompletion: {})
        }
        
        self.searchView.setLimit(count: self.viewModel.requestLimi)
        self.searchView.textField.resignFirstResponder()
        self.searchView.setSearchButtonEnabled(ifNeeded: true)
        self.searchView.textField.text = nil
...
    
    func addToFavoriteAction() {
        self.viewModel.createImageModel()
        self.viewModel.imageData = nil
        self.searchView.setImage(data: Data())
        self.searchView.setAddFavoriteButtonEnabled(ifNeeded: true)
        self.showAlert("Picture successfully added to favorites")
    }
    
}

// MARK: - UITextFieldDelegate
extension SearchViewController: UITextFieldDelegate {
...
